--- a/base.sty
+++ b/base.sty
@@ -44,7 +44,7 @@
 \let\oldabs\abs
 \def\abs{\@ifstar{\oldabs}{\oldabs*}}
 
-\let\oldnorm\norm
+\let\oldnorm\normnewbooleatar
 \def\norm{\@ifstar{\oldnorm}{\oldnorm*}}
 \makeatother
 
@@ -62,3 +62,4 @@
 \newcommand{\IN}{\mathbb{N}}
 \newcommand{\IR}{\mathbb{R}}
 \newcommand{\IQ}{\mathbb{Q}}
+
