Fix some alignment

--- a/1_16.04.tex
+++ b/1_16.04.tex
@@ -1,5 +1,5 @@
 \ifdefined\MAINDOC\else
-\documentclass[10pt,a4paper]{article}
+\documentclass[10pt, a4paper, fleqn]{article}
 \usepackage{base}
 
 \begin{document}
