--- a/skript.tex
+++ b/skript.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,a4paper]{article}
+\documentclass[10pt, a4paper, fleqn]{article}
 \usepackage{base}
 
 \def \MAINDOC {1}
@@ -14,4 +14,5 @@
     \input{2_18.04}
     \input{3_23.04}
     \input{4_25.04}
+    \input{5_30.04}
 \end{document}
