--- a/2_18.04.tex
+++ b/2_18.04.tex
@@ -67,9 +67,9 @@
     $\Delta$-Ungleichung:
     \[\begin{aligned}
         &\abs{\abs{a} - \abs{b}} \leq \abs{a-b} \quad \forall a,b \in \IR \text{, da:} \\
-        &\bullet\abs{a-b+b} \leq \abs{a-b} + \abs{b} &|\ \abs{-b} \\
+        &\bullet\abs{a-b+b} \leq \abs{a-b} + \abs{b} &\Big|\ \abs{-b} \\
         &\eqv \abs{a} - \abs{b} \leq \abs{a-b} \\
-        &\bullet\abs{b-a+a} \leq \abs{b-a} + \abs{a} &|\ \abs{-a} \\
+        &\bullet\abs{b-a+a} \leq \abs{b-a} + \abs{a} &\Big|\ \abs{-a} \\
         &\eqv \abs{b} - \abs{a} \leq \abs{b-a} \\
         &\boxed{\imp \abs{\abs{a} - \abs{b}} \leq \abs{a-b}}
     \end{aligned}\]
