--- a/template.tex
+++ b/template.tex
@@ -1,6 +1,6 @@
 % Template file
 \ifdefined\MAINDOC\else
-\documentclass[10pt,a4paper]{article}
+\documentclass[10pt, a4paper, fleqn]{article}
 \usepackage{base}
 
 \begin{document}
