Typo: Kontradiktion -> Kontraktion

--- a/5_30.04.tex
+++ b/5_30.04.tex
@@ -116,7 +116,7 @@
     was im Widerspruch zu 1.39 steht.
 
     \subsection{Definition: Kontraktion}
-    Eine Abbildung $f: [a, b] \to [a, b]$ heißt Kontradiktion, falls $\alpha \in (0,1)$
+    Eine Abbildung $f: [a, b] \to [a, b]$ heißt Kontraktion, falls $\alpha \in (0,1)$
     existiert, so dass
     $$\abs{f(x)-f(y)} \leq \alpha \abs{x - y}$$
     % TODO: graph
