Monotonie ist definert durch a_{n+1} > a_n ....

--- a/3_23.04.tex
+++ b/3_23.04.tex
@@ -124,12 +124,12 @@
     \begin{enumerate}[a)]
         \item (streng) monoton steigend/wachsend, falls
 
-        $a_n \geq(>) \ a_n \quad \forall n \in \IN$
+        $a_{n+1} \geq(>) \ a_n \quad \forall n \in \IN$
         
         Schreibweise: $(a_n) \nearrow$ (monoton wachsend)
         \item (streng) monoton fallend, falls
 
-        $a_n \leq(<) \ a_n \quad \forall n \in \IN$
+        $a_{n+1} \leq(<) \ a_n \quad \forall n \in \IN$
         
         Schreibweise: $(a_n) \searrow$ (monoton fallend)
     \end{enumerate}
