Fix strange formatting issue

--- a/2_18.04.tex
+++ b/2_18.04.tex
@@ -144,7 +144,7 @@
             \item Z.z: $\qt{\frac{a_n}{b_n}}_{n \geq k}$ hat $\frac{a}{b}$ als Limes.
             
             \newtikzmark
-            Da $\frac{a_n}{b_n} = a_n \cdot \frac{1}{b_n}$, genügt es wegen 3.) zu zeigen, dass $\frac{1}{b_n} \to \frac{1}{b}$.
+            \,Da $\frac{a_n}{b_n} = a_n \cdot \frac{1}{b_n}$, genügt es wegen 3.) zu zeigen, dass $\frac{1}{b_n} \to \frac{1}{b}$.
             \[\begin{aligned}
                 \text{Sei } \epsilon > 0 &\imp \exists N \in \IN : \underbrace{\abs{b_n - b} < \frac{\epsilon}{2} \cdot \abs{b}^2}_{\tikzmark{a}} \\
                 &\imp \abs{\frac{1}{b_n} - \frac{1}{b}} = \abs{\frac{b - b_n}{b \cdot b_n}} \underset{(**)}{<} \frac{2}{\abs{b}^2} \cdot \abs{b - b_n} \tikzmark{b} < \epsilon \quad \forall n \geq N
