--- a/3_23.04.tex
+++ b/3_23.04.tex
@@ -45,7 +45,7 @@
     \end{aligned}$$
 
     \newtikzmark
-    Aus 1.:
+    \,Aus 1.:
     $$\begin{aligned}
         &\abs{b_n - a_n} = b_n - a_n \underset{\tikzmark{a}}{\leq} c_n - a_n = \abs{c_n - a_n} \quad \\
         &\forall n \geq k \\
