--- a/6_02.05.tex
+++ b/6_02.05.tex
@@ -22,7 +22,7 @@
     \end{enumerate}
 
     \subsection{Bemerkung}
-    Falls die Folgen der Parialsummen von $\sum_{i = n_o}^\infty a_i$ bestimmt gegen $+\infty (-\infty)$ divergiert,
+    Falls die Folgen der Partialsummen von $\sum_{i = n_o}^\infty a_i$ bestimmt gegen $+\infty (-\infty)$ divergiert,
     so schreiben wir: $\displaystyle\sum_{i = n_o}^\infty a_i = \infty (-\infty)$
 
     \subsection{Beispiele}
@@ -87,7 +87,7 @@
         \end{itemize}
     \end{enumerate}
 
-    \subsection{Satz: Rechenregeln für Summen}
+    \subsection{Satz: Rechenregeln für Reihen}
     Gegeben seien zwei konvergente Reihen mit $\sum_{k=1}^\infty a_k = a, \sum_{k=1}^\infty b_k = b$ \\
     und $c \in \IR$.
     Dann gilt:
