--- a/7_07.05.tex
+++ b/7_07.05.tex
@@ -25,13 +25,13 @@
         weil absolut konvergent. (2.3e, 2.7)
 
         \item $\displaystyle\sum_{i=0}^\infty \frac{(-1)^i}{i + 1} = 1 - \frac{1}{2} + \frac{1}{3} - \frac{1}{4} \pm ...$
-        (alternierende harminische Reihe) ist konvergent, aber nicht absolut konvergent.
+        (alternierende harmonische Reihe) ist konvergent, aber nicht absolut konvergent.
         Die Konvergenz zeigt man mit
     \end{enumerate}
 
     \subsection{Satz: Leibniz-Kriterium}
     Sei $(a_n)$ monoton fallende Nullfolge reeller Zahlen. Dann ist
-    $\sum{i=0}^{2n} (-1)^i a_i$ konvergent.
+    $\sum_{i=0}^{\infty} (-1)^i a_i$ konvergent.
     \textbf{Beweis: }
     Intervallschachtelung (1.26)
     \[
