--- a/5_30.04.tex
+++ b/5_30.04.tex
@@ -145,7 +145,7 @@
         \item Sei $(a_n)_{n \in \IN}$ eine reelle Folge. Die Folge
         $(S_k)_{k \in \IN}$ mit
         $$S_k = \sum_{i = 1}^k \delta_i = \delta_1 + ... + \delta_k$$
-        heißt (undendliche) Reihe, mit Schreibweise $\displaystyle\sum_{i=1}^\infty \delta_i$. \\
+        heißt (unendliche) Reihe, mit Schreibweise $\displaystyle\sum_{i=1}^\infty \delta_i$. \\
         Die Zahl $S_k \in \IR$ heißt k-te \underline{Partialsumme} der Reihe.
     \end{enumerate}
 \ifdefined\MAINDOC\else
