--- a/base.sty
+++ b/base.sty
@@ -64,6 +64,7 @@
 \newcommand{\imp}{\Rightarrow}
 \newcommand{\eqv}{\Leftrightarrow}
 \newcommand{\xor}{\text{ XOR }}
+\newcommand{\id}{\text{id}}
 
 \newcommand{\IN}{\mathbb{N}}
 \newcommand{\IR}{\mathbb{R}}
