--- a/10_15.05.tex
+++ b/10_15.05.tex
@@ -140,7 +140,7 @@
             \item $n$ ungerade: $f$ punktsymmetrisch, bijektiv, streng monoton steigend
         \end{itemize}
 
-        \item Wurzenlfunktion
+        \item Wurzelfunktion:
         Sind Umkehrfunktion von Monomen
         \begin{itemize}
             \item $n$ ungerade
