--- a/base.sty
+++ b/base.sty
@@ -75,6 +75,7 @@
 \newcommand{\id}{\text{id}}
 \newcommand{\grad}{\text{grad}}
 \newcommand{\cotan}{\text{cotan}}
+\newcommand{\arccotan}{\text{arccotan}}
 
 \newcommand{\IN}{\mathbb{N}}
 \newcommand{\IR}{\mathbb{R}}
