--- a/13_04.06.tex
+++ b/13_04.06.tex
@@ -131,7 +131,7 @@ Sei $f: D \to \IR, D \subseteq \IR$
     \item In 5.15a prüft man zwei Bedingungen: A) Der Grenzwert von $f$ in $X_0$ existiert und 
     B) ist gleich $f(X_0)$.
 
-    \item Wegen 5.6 ist $f$ in $X_0 \in D$ stetigt $\eqv$
+    \item Wegen 5.6 ist $f$ in $X_0 \in D$ stetig $\eqv$
     \[
         \forall \epsilon > 0 \ \exists \delta > 0 \ \forall x \in D: |x-X_0| < \delta
         \imp |f(x) - f(X_0)| < \epsilon    
