--- a/skript.tex
+++ b/skript.tex
@@ -8,6 +8,7 @@
     \maketitle
 
     \tableofcontents
+    \pagebreak
 
     % Input all the files seperately
     \input{1_16.04}
@@ -29,4 +30,5 @@
     \input{17_18.06}
     \input{18_20.06}
     \input{19_25.06}
+    \input{20_27.06}
 \end{document}
